Added MySQL db to terraform configuration

--- a/app1.conf
+++ b/app1.conf
@@ -1,3 +1,5 @@
+<! -- configuration file for app1. Includes proxy redirection -->
+
 <Virtual host *:80>
 ServerName www.persistent-progression.com
 proxypreserve host on
